Add ability to return posts in tree structure or flat structure
